# Abschlussprojekt_ProgUe_2025

./: ReadMe.md  dokuseite.py  layout.css  main.py  maintest.py  patienten.json  patienten_main.py  patientenkalender.py  patientseite.py  pyproject.toml  requirements.txt  style.css  suchfunktion_patient.py  therapy_sessions.json
Patientenseite_State_2_2/: Tendency_dropdown.py
Patientenseite_pietschi/: backend_patientenseite.py
