[project]
name = "Abschlussprojekt_ProgUe_2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hannahneininger", email = "hannahneininger@gmail.com"},
]
dependencies = ["streamlit>=1.46.1", "streamlit-calendar>=1.3.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
